# Sudoku_Game_V2

./: Dockerfile  LICENSE  README.md  sudoku.bash
GAME_GUI/: .gitignore  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  res.qrc
GAME_GUI/INCLUDE/: JsonFileManager.hpp  SudokuBoard.hpp  SudokuGenerator.hpp  SudokuSolver.hpp
GAME_GUI/Puzzle/: test2.json  test3.json  test5.json  test6.json
GAME_GUI/res/qml/: sudokuBoard.qml
GAME_UI/: CMakeLists.txt
GAME_UI/INCLUDE/: JsonFileManager.hpp  SudokuBoard.hpp  SudokuGame.hpp  SudokuSolver.hpp
GAME_UI/Puzzle/: Default_Puzzle.json  test.json
GAME_UI/SOURCE/: JsonFileManager.cpp  SudokuBoard.cpp  SudokuGame.cpp  SudokuGenerator.cpp  SudokuSolver.cpp  main.cpp
GAME_UI/game/: sudoku
